Enforcing immutability + made utility classes final with private constructors + made constrcutor of WebQuerySpecificationArgumentResolver protected + throwing IllegalArgumentException instead of generic RuntimeException